--- a/UniversityWebApp/UniversityWebApp.csproj
+++ b/UniversityWebApp/UniversityWebApp.csproj
@@ -1629,6 +1629,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Account\Profile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
