--- a/UniversityWebApp/Web.config
+++ b/UniversityWebApp/Web.config
@@ -82,5 +82,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-  <add name="UniversityDbContext" connectionString="data source=HM;initial catalog=University;user id=sa;password=123456;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+  <add name="UniversityDbContext" connectionString="data source=HMCHOAN-FS5VOD0\SQLEXPRESS;initial catalog=University;user id=sa;password=123456;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
