Register + Reset Password

--- a/Model/ModelPr.csproj
+++ b/Model/ModelPr.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ModelViews\FileModel.cs" />
     <Compile Include="ModelViews\IdeaCategoryView.cs" />
     <Compile Include="ModelViews\ProfileModel.cs" />
+    <Compile Include="ModelViews\ResetPassword.cs" />
     <Compile Include="ModelViews\UserLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
