Update Readme.md + Update Register for Administrator

--- a/UniversityWebApp/Web.config
+++ b/UniversityWebApp/Web.config
@@ -13,15 +13,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-<!--Email-->
-    <add key="FromEmailAddress" value="NumberOne1501@gmail.com" />
-    <add key="FromEmailDisplayName" value="Đơn hàng mới" />
-    <add key="FromEmailPassword" value="daylamatkhau" />
-    <add key="SMTPHost" value="smtp.gmail.com" />
-    <add key="SMTPPort" value="587" />
+    <!--Email-->
+    <add key="SMTPUserName" value="tienpx.cloud@gmail.com" />
+    <add key="SMTPPassword" value="WrEQQRr0emFn" />
+    <add key="SMTPHost" value="mail.smtp2go.com" />
+    <add key="SMTPPort" value="2525" />
     <add key="EnabledSSL" value="true" />
-    <add key="ToEmailAddress" value="NumberOne1501@gmail.com" />
-    
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
