--- a/UniversityWebApp/UniversityWebApp.csproj
+++ b/UniversityWebApp/UniversityWebApp.csproj
@@ -1614,6 +1614,9 @@
     <Content Include="Areas\QAManager\Views\User\Delete.cshtml" />
     <Content Include="Areas\QAManager\Views\User\Details.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="mail.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
