--- a/UniversityWebApp/Web.config
+++ b/UniversityWebApp/Web.config
@@ -14,15 +14,19 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 <!--Email-->
-    <add key="FromEmailAddress" value="NumberOne1501@gmail.com" />
-    <add key="FromEmailDisplayName" value="Đơn hàng mới" />
-    <add key="FromEmailPassword" value="daylamatkhau" />
+    <add key="FromEmailAddress" value="linanguyen1972@gmail.com" />
+    <add key="FromEmailDisplayName" value="Email" />
+    <add key="ToEmailDisplayName" value="Lina QA manager" />
+    <add key="FromEmailPassword" value="Daylamatkhau" />
     <add key="SMTPHost" value="smtp.gmail.com" />
     <add key="SMTPPort" value="587" />
     <add key="EnabledSSL" value="true" />
-    <add key="ToEmailAddress" value="NumberOne1501@gmail.com" />
-    
+    <add key="ToEmailAddress" value="vtvhongminh100@gmail.com" />
+<!--Hoang anh-->
+    <add key="mailAccount" value="linanguyen1972@gmail.com" />
+    <add key="mailPassword" value="Daylamatkhau" />
   </appSettings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -82,5 +86,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-  <add name="UniversityDbContext" connectionString="data source=HMCHOAN-FS5VOD0\SQLEXPRESS;initial catalog=University;user id=sa;password=123456;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+  <add name="UniversityDbContext" connectionString="data source=HM;initial catalog=University;user id=sa;password=123456;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
