--- a/Model/ModelPr.csproj
+++ b/Model/ModelPr.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ModelViews\CategoryGroupIdeaView.cs" />
     <Compile Include="ModelViews\FileModel.cs" />
     <Compile Include="ModelViews\IdeaCategoryView.cs" />
+    <Compile Include="ModelViews\IdeaViewCountAnalysis.cs" />
     <Compile Include="ModelViews\ProfileModel.cs" />
     <Compile Include="ModelViews\ResetPassword.cs" />
     <Compile Include="ModelViews\UserLogin.cs" />
